--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body data-bs-spy="scroll" data-bs-target="#navId">
     <!-- navbar -->
-    <nav class="navbar fixed-top border-bottom border-5 border-dark">
-        <div class="container">
+    <nav class="navbar fixed-top border-bottom border-3 border-dark">
+        <div class="container" id="navId">
             <img id="nav-logo" src="./imgs/nld_color.png" alt="nld_color">
             <div>
                 <ul class="navbar">
@@ -28,13 +28,16 @@
                         <a class="navbar-brand  mx-3 underlineAnimate" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar-brand  mx-3 underlineAnimate" href="#">Gallery</a>
+                        <a class="navbar-brand  mx-3 underlineAnimate" href="#scrollspyHeading1">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar-brand  mx-3 underlineAnimate" href="#">About</a>
+                        <a class="navbar-brand  mx-3 underlineAnimate" href="#scrollspyHeading2">Gallery</a>
                     </li>
+                    <!-- <li class="nav-item">
+                        <a class="navbar-brand  mx-3 underlineAnimate" href="#scrollspyHeading3">About</a>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="navbar-brand  mx-3 underlineAnimate" href="#">Contact Us</a>
+                        <a class="navbar-brand  mx-3 underlineAnimate" href="#contact">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -48,29 +51,28 @@
             <div class="masthead-subheading">Royalton, MN</div>
         </div>
     </header>
+    <div id="scrollspyHeading1"></div>
 
     <!-- services -->
-    <section class="service-section p-5 min-vh-80">
-        <div class="container">
-            <div class="text-center">
-                <h2 class="text-uppercase">Services</h2>
-                <h3 class="text-muted m-5">We provide full service drywall Installation.</h3>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <i><img class="w-50 rounded-5" src="./imgs/hanging.jpg" alt="hanging.jpg"></i>
+    <section class="service-section">
+        <div class="container text-center">
+            <h2 class="text-uppercase fs-1 fw-bold">Services</h2>
+            <h3 class="text-muted m-5">We provide full service drywall Installation.</h3>
+            <div class="row text-center pt-5">
+                <div class="col-4 max-vh-25">
+                    <i><img class="h-25 rounded-5" src="./imgs/hanging.jpg" alt="hanging.jpg"></i>
                     <h4 class="my-3">Drywall Installation</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
                         architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
-                <div class="col-md-4">
-                    <i><img class="w-50 rounded-5" src="./imgs/tapeing.jpg" alt="hanging.jpg"></i>
-                    <h4 class="my-3">Tapeing / Textureing</h4>
+                <div class="col-4">
+                    <i><img class="h-25 rounded-5" src="./imgs/tapeing.jpg" alt="hanging.jpg"></i>
+                    <h4 class="my-3">Taping / Texturing</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
                         architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
-                <div class="col-md-4">
-                    <i><img class="w-50 rounded-5" src="./imgs/painting.jpg" alt="hanging.jpg"></i>
+                <div class="col-4">
+                    <i><img class="h-25 rounded-5" src="./imgs/painting.jpg" alt="hanging.jpg"></i>
                     <h4 class="my-3">Painting</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
                         architecto quo inventore harum ex magni, dicta impedit.</p>
@@ -78,42 +80,26 @@
             </div>
         </div>
     </section>
+    <div id="scrollspyHeading2"></div>
+
     <!-- gallery -->
-    <section class="gallery min-vh-80">
-        <div class="container">
-            <div class="text-center">
-                <h2 class="text-uppercase">Gallery</h2>
-                <h3 class="text-muted m-5">Photos of previously finished jobs</h3>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
+    <section class="gallery min-vh-100">
+        <div class="container text-center">
+            <h2 class="text-uppercase fs-1 fw-bold">Gallery</h2>
+            <h3 class="text-muted m-5">Photos of previously finished jobs</h3>
+            <div class="row align-items-start pt-5">
+                <div class="col-md-6">
                     <div class="gallery-item">
-                        <div class="gallery link">
-                            <i><img class="w-50" src="./imgs/gallery/nld1.jpg" alt="nld1.jpg"></i>
-                        </div>
-                        <div class="gallery caption">
-                            <h4 class="my-3">Gallery 1</h4>
-                        </div>
+                        <i><img class="w-50 rounded-5" src="./imgs/gallery/nld1.jpg" alt="nld1.jpg"></i>
+                        <h4 class="my-3">Gallery 1</h4>
+                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="gallery-item">
-                        <div class="gallery link">
-                            <i><img class="w-50" src="./imgs/gallery/nld2.jpg" alt="nld1.jpg"></i>
-                        </div>
-                        <div class="gallery caption">
-                            <h4 class="my-3">Gallery 2</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="gallery-item">
-                        <div class="gallery link">
-                            <i><img class="w-50" src="./imgs/gallery/nld1.jpg" alt="nld1.jpg"></i>
-                        </div>
-                        <div class="gallery caption">
-                            <h4 class="my-3">Gallery 3</h4>
-                        </div>
+                        <i><img class="w-50 rounded-5" src="./imgs/gallery/nld2.jpg" alt="nld1.jpg"></i>
+                        <h4 class="my-3">Gallery 2</h4>
+                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
@@ -121,11 +107,10 @@
     </section>
     <!-- Contact-->
     <section class="section-contact p-5 min-vh-80" id="contact">
-        <div class="container">
-            <div class="text-center">
-                <h2 class="text-uppercase">Contact Us</h2>
-                <h3 class="text-muted">Send us a message to schedule a free estimate.</h3>
-            </div>
+        <div class="container text-center">
+            <h2 class="text-uppercase">Contact Us</h2>
+            <h3 class="text-muted">Send us a message to schedule a free estimate.</h3>
+
             <!-- * * * * * * * * * * * * * * *-->
             <!-- * * SB Forms Contact Form * *-->
             <!-- * * * * * * * * * * * * * * *-->
@@ -138,26 +123,32 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <!-- Name input-->
-                            <input class="form-control" id="name" type="text" placeholder="Your Name *" data-sb-validations="required" />
+                            <input class="form-control" id="name" type="text" placeholder="Your Name *"
+                                data-sb-validations="required" />
                             <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
                         </div>
                         <div class="form-group my-5">
                             <!-- Email address input-->
-                            <input class="form-control" id="email" type="email" placeholder="Your Email *" data-sb-validations="required,email" />
+                            <input class="form-control" id="email" type="email" placeholder="Your Email *"
+                                data-sb-validations="required,email" />
                             <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
                             <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
                         </div>
                         <div class="form-group mb-md-0">
                             <!-- Phone number input-->
-                            <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" data-sb-validations="required" />
-                            <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+                            <input class="form-control" id="phone" type="tel" placeholder="Your Phone *"
+                                data-sb-validations="required" />
+                            <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group form-group-textarea mb-md-0">
                             <!-- Message input-->
-                            <textarea class="form-control" id="message" placeholder="Your Message *" data-sb-validations="required"></textarea>
-                            <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                            <textarea class="form-control" id="message" placeholder="Your Message *"
+                                data-sb-validations="required"></textarea>
+                            <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -170,16 +161,20 @@
                         <div class="fw-bolder">Form submission successful!</div>
                         To activate this form, sign up at
                         <br />
-                        <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+                        <a
+                            href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
                     </div>
                 </div>
                 <!-- Submit error message-->
                 <!---->
                 <!-- This is what your users will see when there is-->
                 <!-- an error submitting the form-->
-                <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
+                <div class="d-none" id="submitErrorMessage">
+                    <div class="text-center text-danger mb-3">Error sending message!</div>
+                </div>
                 <!-- Submit Button-->
-                <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Send Message</button></div>
+                <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled"
+                        id="submitButton" type="submit">Send Message</button></div>
             </form>
         </div>
     </section>
@@ -189,9 +184,12 @@
             <div class="row align-items-center">
                 <div class="col-lg-4 text-lg-start">Copyright &copy; Northern Lakes Drywall, LLC 2023</div>
                 <div class="col-lg-4 my-3 my-lg-0">
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i
+                            class="fab fa-twitter"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i
+                            class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i
+                            class="fab fa-linkedin-in"></i></a>
                 </div>
                 <div class="col-lg-4 text-lg-end">
                     <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
@@ -207,6 +205,3 @@
 </body>
 
 </html>
-
-<!-- me-auto mb-2 mb-lg-0  -->
-<!-- text-uppercase -->
