--- a/index.html
+++ b/index.html
@@ -45,55 +45,53 @@
     </nav>
 
     <!-- masthead -->
-    <header class="masthead min-vh-100">
+    <header class="masthead res-w">
         <div class="container">
             <div class="masthead-heading">NORTHERN LAKES<br>DRYWALL, LLC</div>
             <div class="masthead-subheading">Royalton, MN</div>
         </div>
     </header>
+    <div class="logo-section res-w">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-4 my-3">
+                    <a><img class="img-fluid img-brand d-block mx-auto" src="./imgs/logos/loidolt.png"
+                            alt="loidolt"></a>
+                </div>
+                <div class="col-4 my-3">
+                    <a><img class="img-fluid img-brand d-block mx-auto" src="./imgs/logos/usg.png" alt="usg"></a>
+                </div>
+                <div class="col-4 my-3">
+                    <a><img class="img-fluid img-brand d-block mx-auto" src="./imgs/logos/bobs.png" alt="bobs"></a>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="scrollspyHeading1"></div>
 
     <!-- services -->
-    <section class="service-section">
+    <section class="service-section res-w">
         <div class="container text-center">
             <h2 class="text-uppercase fs-1 fw-bold">Services</h2>
-            <h3 class="text-muted m-5">We provide full service drywall Installation.</h3>
+            <h3 class="text-muted subhead">We provide full service drywall Installation.</h3>
             <div class="row text-center pt-5">
-                <div class="col-4 max-vh-25">
-                    <i><img class=" service h-50 rounded-5" src="./imgs/hanging.jpg" alt="hanging.jpg"></i>
+                <div class="col-4 ">
+                    <i><img class="service rounded-5" src="./imgs/hanging.jpg" alt="hanging.jpg"></i>
                     <h4 class="my-3">Drywall Installation</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
                         architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
                 <div class="col-4">
-                    <i><img class="service h-50 rounded-5" src="./imgs/tapeing.jpg" alt="hanging.jpg"></i>
+                    <i><img class="service rounded-5" src="./imgs/tapeing.jpg" alt="hanging.jpg"></i>
                     <h4 class="my-3">Taping / Texturing</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
                         architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
                 <div class="col-4">
-                    <i><img class="service h-50 rounded-5" src="./imgs/painting.jpg" alt="hanging.jpg"></i>
+                    <i><img class="service rounded-5" src="./imgs/painting.jpg" alt="hanging.jpg"></i>
                     <h4 class="my-3">Painting</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
                         architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div>
-            </div>
-        </div>
-        <div class="logo-section py-5 mt-5">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-md-4 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="./imgs/logos/loidolt.png"
-                                alt="..." aria-label="Microsoft Logo"></a>
-                    </div>
-                    <div class="col-md-4 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="./imgs/logos/usg.png"
-                                alt="..." aria-label="Google Logo"></a>
-                    </div>
-                    <div class="col-md-4 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="./imgs/logos/bobs.png"
-                                alt="..." aria-label="Facebook Logo"></a>
-                    </div>
                 </div>
             </div>
         </div>
@@ -101,21 +99,23 @@
     <div id="scrollspyHeading2"></div>
 
     <!-- gallery -->
-    <section class="gallery min-vh-100">
+    <section class="gallery min-vh-100 res-w">
         <div class="container text-center">
             <h2 class="text-uppercase fs-1 fw-bold">Gallery</h2>
-            <h3 class="text-muted m-5">Photos of previously finished jobs</h3>
+            <h3 class="text-muted subhead">Photos of previously finished jobs</h3>
             <div class="row align-items-start pt-5">
                 <div class="col-md-6">
                     <div class="gallery-item">
-                        <a data-bs-toggle="modal" href="#galleryModal1"><img class="w-50 rounded-5" src="./imgs/gallery/nld1.jpg" alt="nld1.jpg"></a>
+                        <a data-bs-toggle="modal" href="#galleryModal1"><img class="w-50 rounded-5"
+                                src="./imgs/gallery/nld1.jpg" alt="nld1.jpg"></a>
                         <h4 class="my-3">Gallery 1</h4>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="gallery-item">
-                        <a data-bs-toggle="modal" href="#galleryModal2"><img class="w-50 rounded-5" src="./imgs/gallery/nld2.jpg" alt="nld1.jpg"></a>
+                        <a data-bs-toggle="modal" href="#galleryModal2"><img class="w-50 rounded-5"
+                                src="./imgs/gallery/nld2.jpg" alt="nld1.jpg"></a>
                         <h4 class="my-3">Gallery 2</h4>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
@@ -124,9 +124,9 @@
         </div>
     </section>
     <!-- Contact-->
-    <section class="section-contact p-5 min-vh-80" id="contact">
+    <section class="section-contact p-5 min-vh-80 res-w" id="contact">
         <div class="container text-center">
-            <h2 class="text-uppercase text-white">Contact Us</h2>
+            <h2 class="text-uppercase text-white mt-5">Contact Us</h2>
             <h3 class="text-muted my-3">Send us a message to schedule a free estimate.</h3>
 
             <!-- https://startbootstrap.com/solution/contact-forms-->
@@ -190,24 +190,27 @@
     </section>
 
     <!-- Footer-->
-    <footer class="footer py-4">
+    <footer class="footer py-4 res-w">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-4 text-lg-start">Copyright &copy; Northern Lakes Drywall, LLC 2023</div>
-                <div class="col-lg-4 text-center">
+                <div class="footer col-4">Copyright &copy; Northern Lakes Drywall, LLC 2023</div>
+                <div class="col-4 text-center">
                     <a class="btn btn-social mx-2" href="#!" aria-label="Facebook"><img src="icons/fb.png"
                             alt="fb.png"></a>
                     <a class="btn btn-social mx-2" href="#!" aria-label="LinkedIn"><img src="icons/linkedin.png"
                             alt="linkedin.png"></a>
                 </div>
-                <div class="col-lg-4 text-lg-end">
-                    <a class="link-dark text-decoration-none me-3" href="https://getbootstrap.com">Bootstrap <img
+                <div class="col-4 text-end">
+                    <a class="footer link-dark text-decoration-none me-3" href="https://getbootstrap.com">Bootstrap <img
                             class="bootstrap-img" src="./imgs/logos/bootstrap-logo-black.svg"
                             alt="bootstrap-logo-black.svg"></a>
                 </div>
             </div>
         </div>
     </footer>
+
+    <!-- text-lg-start -->
+    <!-- text-lg-end -->
 
     <!-- gallery1 modal -->
     <div class="gallery1-modal modal fade" id="galleryModal1" tabindex="-1" role="dialog" aria-hidden="true">
