--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Northern Lakes Drywall, LLC</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -28,11 +28,11 @@
                         <a class="navbar-brand  mx-3 underlineAnimate" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar-brand  mx-3 underlineAnimate" href="#scrollspyHeading1">Services</a>
+                        <a class="navbar-brand  mx-3 underlineAnimate" href="#scrollspyHeading1">Gallery</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="navbar-brand  mx-3 underlineAnimate" href="#scrollspyHeading2">Gallery</a>
-                    </li>
+                    </li> -->
                     <!-- <li class="nav-item">
                         <a class="navbar-brand  mx-3 underlineAnimate" href="#scrollspyHeading3">About</a>
                     </li> -->
@@ -72,26 +72,32 @@
     <!-- services -->
     <section class="service-section res-w">
         <div class="container text-center">
-            <h2 class="text-uppercase fs-1 fw-bold">Services</h2>
+            <h2 class="text-uppercase fs-1 fw-bold">Gallery</h2>
             <h3 class="text-muted subhead">We provide full service drywall Installation.</h3>
             <div class="row text-center pt-5">
                 <div class="col-4 ">
-                    <i><img class="service rounded-5" src="./imgs/hanging.jpg" alt="hanging.jpg"></i>
+                    <a data-bs-toggle="modal" href="#galleryModal1"><img class="service rounded-5"
+                            src="./imgs/hanging.jpg" alt="hanging.jpg"></a>
                     <h4 class="my-3">Drywall Installation</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime
+                        quam
                         architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
                 <div class="col-4">
-                    <i><img class="service rounded-5" src="./imgs/tapeing.jpg" alt="hanging.jpg"></i>
-                    <h4 class="my-3">Taping / Texturing</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
+                    <a data-bs-toggle="modal" href="#galleryModal2"><img class="service rounded-5"
+                            src="./imgs/tapeing.jpg" alt="hanging.jpg"></a>
+                    <h4 class="my-3">Drywall Repair</h4>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime
+                        quam
                         architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
                 <div class="col-4">
-                    <i><img class="service rounded-5" src="./imgs/painting.jpg" alt="hanging.jpg"></i>
-                    <h4 class="my-3">Painting</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
-                        architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <a data-bs-toggle="modal" href="#galleryModal3"><img class="service rounded-5"
+                            src="./imgs/painting.jpg" alt="hanging.jpg"></a>
+                        <h4 class="my-3">Taping / Texturing</h4>
+                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime
+                            quam
+                            architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
             </div>
         </div>
@@ -99,7 +105,7 @@
     <div id="scrollspyHeading2"></div>
 
     <!-- gallery -->
-    <section class="gallery min-vh-100 res-w">
+    <!-- <section class="gallery min-vh-100 res-w">
         <div class="container text-center">
             <h2 class="text-uppercase fs-1 fw-bold">Gallery</h2>
             <h3 class="text-muted subhead">Photos of previously finished jobs</h3>
@@ -122,7 +128,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Contact-->
     <section class="section-contact p-5 min-vh-80 res-w" id="contact">
         <div class="container text-center">
@@ -217,7 +223,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title fs-2 fw-bold ms-2">Gallery 1</h5>
+                    <h5 class="modal-title fs-2 fw-bold ms-2">Drywall Installation</h5>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
                 <div class="modal-body">
@@ -254,7 +260,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title fs-2 fw-bold ms-2">Gallery 2</h5>
+                    <h5 class="modal-title fs-2 fw-bold ms-2">Drywall Repair</h5>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 </div>
                 <div class="modal-body">
@@ -285,6 +291,43 @@
             </div>
         </div>
     </div>
+
+        <!-- gallery3 modal -->
+        <div class="gallery3-modal modal fade" id="galleryModal3" tabindex="-3" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title fs-2 fw-bold ms-2">Taping / Texturing</h5>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                    <div class="modal-body">
+                        <div id="carousel2" class="carousel slide carousel-dark">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active ">
+                                    <img src="./imgs/gallery/nld1.jpg" class="d-block mx-auto max-vh-80" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./imgs/gallery/nld2.jpg" class="d-block mx-auto max-vh-80" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./imgs/gallery/nld1.jpg" class="d-block mx-auto max-vh-80" alt="...">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carousel2"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carousel2"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <script src="./scripts.js"></script>
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
